# automation-hub

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS
.github/workflows/: ci-pipeline.yml  infrastructure-health.yml  main.ci.yml  spotify.ci.yml
clients/ai_utils/: README.md  __init__.py  pyproject.toml
clients/ai_utils/ai_utils_client/: __init__.py  data_ingestor_client.py  data_processor_client.py
clients/core_lib/: README.md  pyproject.toml
clients/core_lib/core_lib_client/: logger_client.py
clients/gdrive/: Makefile  README.md  __init__.py  pyproject.toml
clients/gdrive/gdrive_client/: __init__.py  auth.py  client.py  drive.py
clients/gdrive/scripts/: clean_gdrive_output.py  gdrive_health_check.py
clients/gdrive/tests/: gdrive_test.py
clients/spotify/: Makefile  pyproject.toml
clients/spotify/spotify_client/: client.py
clients/spotify/tests/: client_test.py
docs/architecture/: layered-system.md
docs/standards/: git-conventions.md
scripts/: global_health_check.py
spotify/: Makefile  README.md
spotify/src/: client.py
