[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "automation-hub"
version = "0.1.0"
description = "Centralized automation clients and AI utilities"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # --- Core & Environment ---
    "python-dotenv",
    "requests",
    # --- Google Drive API Integration ---
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    # --- Data Science & AI (AI-Lab Support) ---
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scipy>=1.12.0",
    "matplotlib>=3.8.0",
    "scikit-learn>=1.4.0",
    # --- Quality Gates & Security (SSoT) ---
    "bandit",
    "pip-audit",
    "ruff",
    # --- Testing & Notebook Automation ---
    "pytest",
    "nbclient",
    "nbformat"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["clients"]

[tool.ruff]
# Define the strict limit (Black style)
line-length = 88
# Target Python version
target-version = "py312"

[tool.ruff.lint]
# E501 is part of 'E'. We add 'I' for isort (imports) and 'F' for Pyflakes.
# 'UP' helps keeping code modern.
select = ["E", "F", "I", "UP", "B"]
ignore = []

# Configure how to handle long lines in docstrings/comments specifically
[tool.ruff.lint.pycodestyle]
max-doc-length = 100

[tool.ruff.format]
# Standardizing the formatter to resolve line length issues automatically
quote-style = "double"
indent-style = "space"
# This is key: it forces wraps when a trailing comma is present
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
# Ensures imports are organized and grouped logically
combine-as-imports = true
force-single-line = false