[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spotify-client"
version = "0.1.0"
description = "Lightweight Spotify Web API client (Client Credentials Flow)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests",
    "python-dotenv",
]

# ─────────────────────────────────────────────────────────────
# Ruff configuration (Replaces Black and Isort)
# ─────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 88  # Standard Black line length
target-version = "py312"
fix = true

[tool.ruff.lint]
# E/F: Pycodestyle/Pyflakes, I: Isort logic, B: Bugbear
select = ["E", "F", "I", "B"]
ignore = ["E501"] # Formatting handles line length

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"] # Allow assert in tests

# ─────────────────────────────────────────────────────────────
# Pytest configuration
# ─────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
# Simplified pythonpath for editable installs
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-vv -s --tb=short"
markers = [
    "integration: marks tests as integration (skipped in CI)"
]